# EvoKernel

./: .env.example  .gitignore  README.md  pyproject.toml  report.md  requirements.txt  run_search.py
evokernel/: __init__.py
evokernel/agents/: critic.py  generator.py
evokernel/kernels/fused_rmsnorm_rope/: baseline.py  reference.py
evokernel/kernels/rmsnorm/: baseline.py  reference.py
evokernel/kernels/rope/: baseline.py  reference.py
evokernel/mcp/: server.py
evokernel/reports/: report_generator.py  results_tracker.py
evokernel/search/: agent_loop.py  candidate_store.py  evolutionary.py
gpu_server/: requirements.txt  server.py
results/: README.md  fused_rmsnorm_rope_report_20260615_140749.md  fused_rmsnorm_rope_report_20260615_152732.md  fused_rmsnorm_rope_report_20260615_162921.md  fused_rmsnorm_rope_trace_20260615_140749.md  fused_rmsnorm_rope_trace_20260615_152732.md  fused_rmsnorm_rope_trace_20260615_162921.md  rmsnorm.md  rmsnorm_report_20260615_141716.md  rmsnorm_report_20260615_150738.md  rmsnorm_report_20260615_160144.md  rmsnorm_trace_20260615_141716.md  rmsnorm_trace_20260615_150738.md  rmsnorm_trace_20260615_160144.md  rope_report_20260615_134247.md  rope_report_20260615_151718.md  rope_report_20260615_161818.md  rope_trace_20260615_134247.md  rope_trace_20260615_151718.md  rope_trace_20260615_161818.md  summary.md
