[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "evokernel"
version = "0.1.0"
description = "Autonomous Triton kernel optimization via hardware-guided evolutionary search"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
]

[project.scripts]
evokernel = "run_search:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["evokernel*"]
